bk_ida/gccida/c1/convert_regs_exit
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_exit/src/reg-stack.c:2931:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[v3] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_exit/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_exit/src/obj/reg-stack.o] Error 1
